--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <script src="./Prototypes.js"></script>
+    <script src="./prototypePlay.js"></script>
+    <script src="./objectPlay.js"></script>
 
 </body>
 </html>
