--- a/mandelbrot/index.html
+++ b/mandelbrot/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>mandelbrot</title>
+		<base href="https://angeleefshaw.github.io/mandelbrot/">
 		<script src="libraries/p5.js"></script>
 		<!-- <script src="libraries/p5.sound.js"></script> -->
 		<script src="sketch.js"></script>
