Array practice in javascript

--- a/playground/index.html
+++ b/playground/index.html
@@ -10,6 +10,8 @@
 
     <script src="./prototypePlay.js"></script>
     <script src="./objectPlay.js"></script>
+    <script src="codewars.js"></script>
+    <script src="arrayPractice.js"></script>
 
 </body>
 </html>
